@@ -1,3 +1,5 @@
+* partcomp models recently broken, fixed now
+
 * more than one parameter can now be passed to parprior to make specifying identical priors more 
   convenient 
 
